docs(MyNote): 补充 JavaWeb 中 Spring Bean 管理相关内容
- 添加 Spring Bean 作用域说明，包括 singleton、prototype、request、session 和 application
- 示例演示单例和多例 Bean 的创建和使用
- 解释 @Lazy 注解的用途和使用方法
- 讨论 Bean 的线程安全性问题
- 介绍 @Bean 注解的使用方法和配置类的概念